# aegis-sap-chatbot

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Makefile  PROJECT_CONTEXT_AND_HISTORY.md  README.md  audit_repo.sh  audit_results.txt  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  config_inference_chains.py  main.py  observability.py
backend/app/clients/: ollama_vision.py
backend/app/handlers/: admin_handler.py  chat_handler.py  inference_health_handler.py  knowledge_entries_handler.py  knowledge_screenshots_handler.py  upload_handler.py
backend/app/infrastructure/: circuit_breaker.py  inference_providers.py  minio_client.py  opensearch_client.py  postgres_client.py  providers_cloudflare.py  providers_gemini.py  qdrant_client.py  redis_client.py  vault_client.py
backend/app/middleware/: authentication.py  input_governance.py  output_governance.py  rate_limiting.py  trace_id.py
backend/app/models/: api.py  quick_entry.py  retrieval.py  session.py
backend/app/services/: form_chunker.py  form_import_parser.py  form_validator.py  ingestion_pipeline.py  model_gateway.py  query_intelligence.py  quick_entry_quality.py  reasoning_service.py  retrieval_engine.py  session.py  validation_engine.py  vision_integration.py
backend/app/tasks/: audit_task.py  cache_task.py  check_config_staleness.py  check_inference_provider_health.py  cleanup_eligible_screenshots.py  cleanup_task.py  enrich_entry_screenshots.py  feedback_task.py  (+5 more)
(+637 files in other folders)
