[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aegis-backend"
version = "1.0.0"
description = "AEGIS - Adaptive Enterprise Grade Intelligence System - Backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 180
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
